--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "@vue/runtime-core": "^3.5.13",
+    "axios": "^1.8.4",
     "core-js": "^3.37.1",
+    "pinia": "^3.0.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
@@ -24,13 +27,13 @@
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^14.1.3",
-    "@vue/tsconfig": "^0.5.1",
+    "@vue/tsconfig": "^0.4.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
-    "typescript": "~5.6.3",
+    "typescript": "^4.9.5",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
